src/components/AuthForm/AuthForm.module.scss
.formContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    .input {
        margin: 0 40px 10px;
        width: 250px;
        height: 40px;
        background-color: #f3f3f3;
        border-radius: 5px;
        border: 1px solid #eaeaea;
        padding: 0 16px;
        transition: box-shadow 0.2s ease-in-out;
        &:focus {
            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.02);
            outline: none !important;
            border: 1px solid rgb(207, 217, 222);
        }
    }
    .passwordContainer {
        display: flex;
        align-items: center;
        position: relative;
        width: 282px;
        height: 40px;
        margin: 0 40px 10px;
        background-color: #f3f3f3;
        border-radius: 5px;
        border: 1px solid #eaeaea;
        .passwordInput {
            width: 100%;
            height: 100%;
            background-color: #f3f3f3;
            border: none;
            padding: 0 16px;
            transition: box-shadow 0.2s ease-in-out;
            &:focus {
                box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.02);
                outline: none !important;
                border: 1px solid rgb(207, 217, 222);
            }
        }
        button {
            position: absolute;
            right: 5px;
            background-color: transparent;
            border: none;
            cursor: pointer;
            font-weight: 600;
        }
    }
}

